--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,17 @@
             "mainClass": "com.gleisonoliveira.restapi.Startup",
             "projectName": "restapi",
             "args": "",
+            "envFile": "${workspaceFolder}/.env",
+            "vmArgs": " -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=63699 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dspring.jmx.enabled=true -Djava.rmi.server.hostname=localhost -Dspring.application.admin.enabled=true -Dspring.boot.project.name=restapi"
+        },
+        {
+            "type": "java",
+            "name": "Spring Boot-Startup<personapi>",
+            "request": "launch",
+            "cwd": "${workspaceFolder}",
+            "mainClass": "com.gleisonoliveira.personapi.Startup",
+            "projectName": "personapi",
+            "args": "",
             "envFile": "${workspaceFolder}/.env"
         }
     ]
