--- a/personapi/personapi/pom.xml
+++ b/personapi/personapi/pom.xml
@@ -98,10 +98,17 @@
 			<artifactId>jackson-dataformat-xml</artifactId>
 			<version>2.15.0</version>
 		</dependency>
+
 		<dependency>
 			<groupId>com.fasterxml.jackson.dataformat</groupId>
 			<artifactId>jackson-dataformat-yaml</artifactId>
 			<version>2.14.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-hateoas</artifactId>
+			<version>3.2.3</version>
 		</dependency>
 
 	</dependencies>
