add unit tests and mockito

--- a/personapi/personapi/pom.xml
+++ b/personapi/personapi/pom.xml
@@ -110,6 +110,13 @@
 			<artifactId>spring-boot-starter-hateoas</artifactId>
 			<version>3.2.3</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>5.11.0</version>
+			<scope>test</scope>
+		</dependency>
 
 	</dependencies>
 
