--- a/personapi/personapi/src/main/resources/.env.example
+++ b/personapi/personapi/src/main/resources/.env.example
@@ -5,3 +5,5 @@ flyway.password=pass
 JPA_URL="jdbc:mysql://127.0.0.1:3308/curso_java?useTimezone=true&serverTimezone=UTC"
 JPA_USER="user"
 JPA_PASSWORD="pass"
+ENV="test"
+SWAGGER_ENABLE="true"
